:rocket: Working app cards again.

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="assets/css/lib/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="assets/css/index.css">
   </head>
-  <body class="has-navbar-fixed-top">
-    <nav class="navbar is-fixed-top">
+  <body>
+    <nav class="navbar">
       <div class="navbar-brand">
         <a class="navbar-item" href="https://store.bananahackers.net">
           <img src="assets/logos/bhackers-store.png" width="28" height="28">
@@ -484,7 +484,7 @@
     <!-- QR Code -->
     <script src="assets/js/lib/qrcode.min.js" defer></script>
     <!-- Store DB -->
-    <script src="assets/js/lib/storedb.js" defer></script>
+    <script src="assets/js/lib/storedb/storedb.js" defer></script>
     <!-- Index -->
     <script src="assets/js/index.js" defer></script>
   </body>
