:rocket: Ratings partially working again!

--- a/src/index.html
+++ b/src/index.html
@@ -176,7 +176,7 @@
           </div>
         </div>
       </div>
-      <div class="tabs is-centered is-boxed">
+      <div class="tabs is-boxed is-fullwidth">
         <ul id="categories-tabs"></ul>
       </div>
       <div id="app-cards-container">
