:rocket: Use browser based relative time & split code up.

--- a/src/index.html
+++ b/src/index.html
@@ -473,11 +473,12 @@
       </div>
     </div>
 
-    <!-- Globalize -->
+    <!-- Localization -->
     <script src="assets/js/lib/i18next/i18next.min.js" defer></script>
     <script src="assets/js/lib/i18next/plugins/i18nextBrowserLanguageDetector.min.js" defer></script>
     <script src="assets/js/lib/i18next/plugins/i18next-fetch-backend.umd.js" defer></script>
-    <script src="assets/js/lib/i18next/plugins/loc-i18next.min.js"></script>
+    <script src="assets/js/lib/i18next/plugins/loc-i18next.min.js" defer></script>
+    <script src="assets/js/lib/relativetime.js" defer></script>
     <!-- Bulma -->
     <script src="assets/js/lib/bulma/bulma-toast.min.js" defer></script>
     <script src="assets/js/lib/bulma/bulma-modal.js" defer></script>
@@ -486,6 +487,8 @@
     <!-- Store DB -->
     <script src="assets/js/lib/storedb/storedb.js" defer></script>
     <!-- Index -->
-    <script src="assets/js/index.js" defer></script>
+    <script src="assets/js/index/init.js" defer></script>
+    <script src="assets/js/index/utils.js" defer></script>
+    <script src="assets/js/index/controller.js" defer></script>
   </body>
 </html>
