:rocket: Preliminary search support.

--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,7 @@
                     <option class="i18n" value="alphabetical" data-i18n="alphabetical">alphabetical</option>
                     <option class="i18n" value="popularity" data-i18n="popularity">popularity</option>
                     <option class="i18n" value="categorical" data-i18n="categorical">categorical</option>
+                    <option class="i18n" value="ratings" data-i18n="ratings">ratings</option>
                   </select>
                 </div>
               </div>
@@ -167,7 +168,7 @@
           </div>
         </div>
       </div>
-      <div class="tabs is-boxed is-fullwidth">
+      <div id="categories-tabs-container" class="tabs is-boxed is-fullwidth">
         <ul id="categories-tabs"></ul>
       </div>
       <div id="app-cards-container">
@@ -289,6 +290,10 @@
                 <tr>
                   <th class="i18n" data-i18n="version">version</th>
                   <td id="app-details-modal-app-version">?</td>
+                </tr>
+                <tr>
+                  <th class="i18n" data-i18n="size">size</th>
+                  <td id="app-details-modal-app-size">?</td>
                 </tr>
                 <tr>
                   <th class="i18n" data-i18n="type">type</th>
